get course by category
